Initial project commit

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: red;
+    background-color:rgb(11, 10, 10);
     align-items: center;
     height: 60px;
     padding: 0 20px;
