--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -16,7 +16,7 @@
   font-size: 42px;
 }
 .home__container .button {
-  background-color: red;
+  background-color: rgb(6, 6, 6);
   color: white;
   margin-top: 1rem;
   font-size: 1.2rem;
