--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: red;
+  background-color: rgb(7, 7, 6);
   align-items: center;
   height: 60px;
   padding: 0 20px;
