--- a/client/src/components/taskmanager/tasklist.scss
+++ b/client/src/components/taskmanager/tasklist.scss
@@ -4,7 +4,7 @@
     align-items: center;
     margin: 0 auto;
     width: 90%;
-    background-color: red;
+    background-color: rgb(9, 10, 9);
     padding: 1rem;
     color: white;
 
