--- a/client/src/pages/dashboard/dashboard.scss
+++ b/client/src/pages/dashboard/dashboard.scss
@@ -36,7 +36,7 @@
     }
 
     .button {
-        background-color: red;
+        background-color: rgb(11, 10, 10);
         color: white;
         width: 20rem;
 
