--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -17,7 +17,7 @@
         }
 
         .button {
-            background-color: red;
+            background-color:rgb(14, 13, 12);
             color: white;
             margin-top: 1rem;
             font-size: 1.2rem;
